k8s/manifests/k8s/node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node
  labels:
    app: node
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
        - name: node
          image: a0194438u/node-web-app:latest
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 5000
          resources:
            limits:
              cpu: 40m
              memory: 100Mi
