k8s/manifests/k8s/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: node
  name: node
spec:
  selector:
    app: node
  type: ClusterIP
  ports:
    - name: http
      port: 8081
      protocol: TCP
      targetPort: http
