k8s/manifests/k8s/node-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node
  labels:
    app: node
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1 
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            # leave it is as backend
            backend:
              service:
                name: node
                port:
                  name: http
